--- a/index.html
+++ b/index.html
@@ -1,62 +1,140 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Minhas Músicas</title>
-    <link rel="stylesheet" href="static/css/style.css">
-</head>
-<body>
-    <center>
-    <h1>🎶  Pedrin musicas 🎶</h1>
+  <meta charset="UTF-8">
+  <title>Pedrin • Músicas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <div class="musica">
-        <p>Flor De Cacto&reg;</p>
-        <audio controls>
-            <br>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Ícones -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+  <!-- Estilo custom -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/estilo.css') }}">
+</head>
+<body class="bg-dark text-light">
+
+  <!-- HEADER -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-black shadow fixed-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold text-info" href="#">🎶 Pedrin</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#musicas">Músicas</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- HERO -->
+  <header class="text-center py-5 mt-5">
+    <div class="container">
+      <h1 class="display-4 fw-bold text-info">Minhas Músicas</h1>
+      <p class="lead text-secondary">Escute e faça o download das minhas faixas mais recentes 🚀</p>
+    </div>
+  </header>
+
+  <!-- LISTA DE MÚSICAS -->
+  <section id="musicas" class="container py-4">
+    <div class="row g-4">
+
+      <!-- Música 1 -->
+      <div class="col-md-6">
+        <div class="card bg-black text-light shadow rounded-3 p-3">
+          <h5 class="fw-bold">Flor De Cacto&reg;</h5>
+          <audio controls class="w-100 mb-2">
             <source src="static/musicas/flor_de_cacto.mp3" type="audio/mpeg">
             Seu navegador não suporta áudio.
-        </audio>
-        <br>
-        <a href="static/musicas/flor_de_cacto.mp3" download>⬇️ Baixar Flor de Cacto</a>
-    </div>
+          </audio>
+          <a href="static/musicas/flor_de_cacto.mp3" download class="btn btn-info w-100">
+            <i class="bi bi-download"></i> Baixar Flor de Cacto
+          </a>
+        </div>
+      </div>
 
-    <div class="musica">
-        <p>Amor Ou Dopamina&reg;</p>
-        <audio controls>
+      <!-- Música 2 -->
+      <div class="col-md-6">
+        <div class="card bg-black text-light shadow rounded-3 p-3">
+          <h5 class="fw-bold">Amor Ou Dopamina&reg;</h5>
+          <audio controls class="w-100 mb-2">
             <source src="static/musicas/amor_ou_dopamina.mp3" type="audio/mpeg">
-        </audio>
-        <br>
-        <a href="static/musicas/amor_ou_dopamina.mp3" download>⬇️ Baixar Amor ou Dopamina</a>
-    </div>
+          </audio>
+          <a href="static/musicas/amor_ou_dopamina.mp3" download class="btn btn-info w-100">
+            <i class="bi bi-download"></i> Baixar Amor ou Dopamina
+          </a>
+        </div>
+      </div>
 
-    <div class="musica">
-        <p>Luz Amarela&reg;</p>
-        <audio controls>
+      <!-- Música 3 -->
+      <div class="col-md-6">
+        <div class="card bg-black text-light shadow rounded-3 p-3">
+          <h5 class="fw-bold">Luz Amarela&reg;</h5>
+          <audio controls class="w-100 mb-2">
             <source src="static/musicas/Luz_amarela.mp3" type="audio/mpeg">
-        </audio>
-        <br>
-        <a href="static/musicas/Luz_amarela.mp3" download>⬇️ Baixar Luz Amarela</a>
-    </div>
+          </audio>
+          <a href="static/musicas/Luz_amarela.mp3" download class="btn btn-info w-100">
+            <i class="bi bi-download"></i> Baixar Luz Amarela
+          </a>
+        </div>
+      </div>
 
-    <div class="musica">
-        <p>Isolado&reg;</p>
-        <audio controls>
+      <!-- Música 4 -->
+      <div class="col-md-6">
+        <div class="card bg-black text-light shadow rounded-3 p-3">
+          <h5 class="fw-bold">Isolado&reg;</h5>
+          <audio controls class="w-100 mb-2">
             <source src="static/musicas/isolado.mp3" type="audio/mpeg">
-        </audio>
-        <br>
-        <a href="static/musicas/isolado.mp3" download>⬇️ Baixar Isolado</a>
-    </div>
+          </audio>
+          <a href="static/musicas/isolado.mp3" download class="btn btn-info w-100">
+            <i class="bi bi-download"></i> Baixar Isolado
+          </a>
+        </div>
+      </div>
 
-    <div class="musica">
-        <p>Sem Medo de Errar&reg;</p>
-        <audio controls>
+      <!-- Música 5 -->
+      <div class="col-md-6">
+        <div class="card bg-black text-light shadow rounded-3 p-3">
+          <h5 class="fw-bold">Sem Medo de Errar&reg;</h5>
+          <audio controls class="w-100 mb-2">
             <source src="static/musicas/sem_medo_de_errar.mp3" type="audio/mpeg">
-        </audio>
-        <br>
-        <a href="static/musicas/sem_medo_de_errar.mp3" download>⬇️ Baixar Sem Medo de Errar</a>
-        <center>
-    </div>
-</body>
+          </audio>
+          <a href="static/musicas/sem_medo_de_errar.mp3" download class="btn btn-info w-100">
+            <i class="bi bi-download"></i> Baixar Sem Medo de Errar
+          </a>
+        </div>
+      </div>
 
+    </div>
+  </section>
+
+  <!-- CONTATO -->
+  <section id="contato" class="py-5 bg-black text-center">
+    <div class="container">
+      <h2 class="fw-bold text-info">Entre em Contato</h2>
+      <p class="text-secondary">Siga nas redes sociais para mais novidades</p>
+      <div>
+        <a href="https://www.instagram.com/pedro_silveiraa/?hl=pt-br" class="text-info fs-3 mx-2"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.tiktok.com/@d1n.https?lang=pt-BR" class="text-info fs-3 mx-2"><i class="bi bi-tiktok"></i></a>
+        <a href="#" class="text-info fs-3 mx-2"><i class="bi bi-spotify"></i></a>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="bg-dark text-center py-3">
+    <p class="mb-0 text-secondary">&copy; 2025 Pedrin. Todos os direitos reservados.</p>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
+
 
